# automated-software-testing

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  SECURITY.md  data.db  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  setup_environment.yml
app/: app.py
app/tests/: __init__.py
app/tests/system/: __init__.py  test_base.py  test_home.py
bdd/: __init__.py  app.py
bdd/tests/: __init__.py
bdd/tests/acceptance/: __init__.py  content.feature  navigation.feature
bdd/tests/acceptance/locators/: __init__.py  base_page.py  blog_page.py  home_page.py  new_post_page.py
bdd/tests/acceptance/page_models/: __init__.py  base_page.py  blog_page.py  home_page.py  new_post_page.py
bdd/tests/acceptance/steps/: __init__.py  content.py  interactions.py  navigation.py  wait.py
cli/: __init__.py  blog.py  main.py  post.py
cli/tests/integration/: blog_test.py
cli/tests/system/: main_test.py  test_main.py
cli/tests/unit/: blog_test.py  post_test.py
restful_api/: .env.sample  __init__.py  data.db  run.py
restful_api/app/: __init__.py  app.py
restful_api/app/api/: __init__.py
restful_api/app/api/router/: __init__.py  item.py  store.py  user.py
restful_api/app/config/: __init__.py  config.py
restful_api/app/core/: __init__.py  utils.py
restful_api/app/core/security/: __init__.py  jwt.py  password.py
restful_api/app/db/: __init__.py  db.py
restful_api/app/models/: __init__.py  item.py  store.py  user.py
restful_api/app/resources/: __init__.py  item.py  store.py  user.py
restful_api/tests/: __init__.py  data.db  test_base.py
restful_api/tests/integration/: __init__.py
restful_api/tests/integration/models/: __init__.py  test_item.py  test_store.py  test_user.py
restful_api/tests/system/: __init__.py  base_test.py  test_item.py  test_store.py  test_user.py
restful_api/tests/unit/: __init__.py
restful_api/tests/unit/models/: __init__.py  test_item.py  test_store.py  test_user.py
templates/: blog.html  home.html  new_post.html  post.html
